# llm-app

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: agents.py  mcp_client.py  mcp_servers.py  mcp_tools.py  mock_instruction_manual.md  mock_instruction_manual.txt  vectorstore_prestart.py
backend/app/api/: main.py
backend/app/tools/: instruction_manual.py  sensors.py
backend/scripts/: prestart.sh
frontend/: Dockerfile  index.html  package.json
frontend/src/: app.css  app.jsx  chat-interface.jsx
