[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.9.0",
    "mcp[cli]>=1.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]
